modals : better header

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -193,19 +193,15 @@ crossorigin=""/>
 <!--MODAL CONTACT -->
       
 <div class="modal" tabindex="-1" role="dialog" id="lesContacts">
-<div class="modal-dialog" role="document">
+<div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
-  
-<div class="modal-header">
-<div class="container-fluid">
-<div class="row">
-  <div class="text-center col-11"><h4 class="modal-title modal-title1">Contact</h4></div>
-  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-</div>
-</div>
+ 
+<div class="modal-header d-block">
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <h4 class="text-center  modal-title modal-title1">Contact</h4>
 </div>
 
-<div class="modal-body">
+<div class="modal-body text-justify my-modal-body">
   
 <div class="mail">
   <p>Si vous souhaitez nous faire part d'une remarque ou d'une interrogation, merci de rentrer en contact avec l'une des adresses mails suivantes : </p>
@@ -234,16 +230,12 @@ crossorigin=""/>
 <div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
   
-<div class="modal-header">
-<div class="container-fluid">
-<div class="row">
-  <div class="text-center col-11"><h4 class="modal-title modal-title1">Sources</h4></div>
-  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-</div>
-</div>
+<div class="modal-header d-block">
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <h4 class="text-center  modal-title modal-title1">Sources</h4>
 </div>
 
-<div class="modal-body">
+<div class="modal-body text-justify my-modal-body">
   
 <div class="source">
   <p>Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </p>
@@ -302,21 +294,17 @@ crossorigin=""/>
 </div>
 
 
-<!--MODAL COLLABORATEURS ex-CREDITS -->  
+<!--MODAL ILS NOUS SOUTIENNENT ex-COLLABORATEURS ex-CREDITS -->  
 <div class="modal" tabindex="-1" role="dialog" id="lesCollaborateurs">
-<div class="modal-dialog" role="document">
+<div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
-  
-<div class="modal-header">
-<div class="container-fluid">
-<div class="row">
-  <div class="text-center col-11"><h4 class="modal-title modal-title1">Les collaborateurs</h4></div>
-  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-</div>
-</div>
+ 
+<div class="modal-header d-block">
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <h4 class="text-center  modal-title modal-title1">Ils nous soutiennent</h4>
 </div>
 
-<div class="modal-body">
+<div class="modal-body text-justify my-modal-body">
   <p> Le projet <b><i>ScenTree</i></b> a été imaginé et conçu par deux étudiants du master MSc de l’ISIPCA, Maxime BAUD et Thomas ESPINASSE. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail.  </p>
   <p> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </p>
   
@@ -358,19 +346,15 @@ crossorigin=""/>
 
 <!--MODAL LISTE MP-->   
 <div class="modal" tabindex="-1" role="dialog" id="listeMP">
-<div class="modal-dialog" role="document">
+<div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
-  
-<div class="modal-header">
-<div class="container-fluid">
-<div class="row">
-  <div class="text-center col-11"><h4 class="modal-title modal-title1">Les ingrédients du ScenTree</h4></div>
-  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-</div>
-</div>
+ 
+<div class="modal-header d-block">
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <h4 class="text-center  modal-title modal-title1">Les ingrédients du ScenTree</h4>
 </div>
 
-<div class="modal-body">
+<div class="modal-body text-justify my-modal-body">
   
 <div class="row">
 <div class="col-lg-6">
@@ -392,19 +376,15 @@ crossorigin=""/>
 
 <!--MODAL LISTE FAMILLE-->
 <div class="modal" tabindex="-1" role="dialog" id="Listefamilles">
-<div class="modal-dialog" role="document">
+<div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
-  
-<div class="modal-header">
-<div class="container-fluid">
-<div class="row">
-  <div class="text-center col-11"><h4 class="modal-title modal-title1">Les familles et descripteurs olfactifs du ScenTree</h4></div>
-  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-</div>
-</div>
+ 
+<div class="modal-header d-block">
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <h4 class="text-center  modal-title modal-title1">Les familles et descripteurs olfactifs du ScenTree</h4>
 </div>
 
-<div class="modal-body">
+<div class="modal-body text-justify my-modal-body">
 <div class="container-fluid">
   
   <p>Le projet <i>ScenTree</i> utilise un ensemble de familles et de descripteurs olfactifs pour classifier l'ensemble des matières premières disponibles sur le site. Les voici : </p>
@@ -448,28 +428,14 @@ crossorigin=""/>
 
 <!-- MODAL DESCRIPTEURS -->
 <div class="modal fade" tabindex="-1" role="dialog" id="DescripteurModal">
-<div class="modal-dialog modal-m" role="document">
+<div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
-  
-<div class="modal-header">
-<div class="container-fluid">
-<div class="row">
-  
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-<div class="container-fluid">
-<div class="row">
-	<div class="text-center col-11"><span id="modaltitle2" class="modal-title modal-title1"></span></div>
-<div class="col-1"><a href="/" class="close" data-dismiss="modal">&times;</a></div>
+ 
+<div class="modal-header d-block">
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <span id="modaltitle2" class="modal-title modal-title1"></span>
+  <span id="modalheader-type2" class="float-right modalheader-type"></span>
 </div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-<div id="modalheader-type2" class="modalheader-type"></div>
-</div>
-
-</div>
-</div>	 			
-</div>	 			
 
 <div class="modal-body">
 <div class="container-fluid">
@@ -482,15 +448,7 @@ crossorigin=""/>
 </div> <!-- fin body -->
 
 <div class="modal-footer">
-  
-<div class="container-fluid">
-<div class="row"> 
-<div class="col-xs-12 text-center">
-  <a href="/" class="btn btn-default" data-dismiss="modal">Close</a>
-</div> 
-</div>
-</div>
-
+  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Close</button>
 </div> <!-- fin footer -->
 
 </div> <!-- fin content -->
@@ -504,30 +462,18 @@ crossorigin=""/>
 <div class="modal-content">
   
   <!--modal header-->
-<div class="modal-header">
-<div class="container-fluid">
-  
-<div class="row ">
-  
-<div class="col-8">
-<div id="modaltitle" class="modal-title"></div>
+<div class="modal-header d-block">
+<div>
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <span id="modaltitle" class="modal-title"></span>
+  <span id="modalheader-type" class="float-right modalheader-type2"></span>
 </div>
-
-<div class="col-3">
-<div id="modalheader-type" class="modalheader-type2"></div>
-</div>
-<div class="col-1"><a href="/" class="close" data-dismiss="modal">&times;</a></div>
-
-</div>
-
-<div class="row">
-  <span id="modaltitle-fili" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 Filiation"></span>
-</div>
-
+<div class="text-center">
+  <span id="modaltitle-fili" class="Filiation"></span>
 </div>
 </div>
 
-<div class="modal-body">           
+<div class="modal-body text-justify my-modal-body"> 
   <!-- définissions des onglets -->
 <div class="panel-heading">
 <nav class="navbar navbar-expand-sm navbar-light bg-transparent">
@@ -985,16 +931,12 @@ crossorigin=""/>
 <div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
 
-<div class="modal-header">
-<div class="container-fluid">
-<div class="row">
-  <div class="text-center col-11"><h4 class="modal-title modal-title1">Mentions Légales</h4></div>
-  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-</div>
-</div>
+<div class="modal-header d-block">
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <h4 class="text-center  modal-title modal-title1">Mentions Légales</h4>
 </div>
 
-<div class="modal-body">
+<div class="modal-body text-justify my-modal-body">
   <p>En vertu du règlement (EU-RGPD) 2016/679 du Parlement Européen et du Conseil du 27 avril 2016 relatif à la protection des personnes physiques à l’égard du traitement des données à caractère personnel et à la libre circulation de ces données, et abrogeant la directive 95/46/CE (Règlement Général sur la Protection des Données) et conformément aux dispositions des articles 6-III et 19 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, nous portons à la connaissance des utilisateurs et visiteurs du site internet <a href="http://scentree.co/" target="_BLANK">scentree.co</a> les informations suivantes.</p>
   
   <ol>
