--- a/html/_/index.html
+++ b/html/_/index.html
@@ -476,18 +476,18 @@ crossorigin=""/>
 <div class="modal-body text-justify my-modal-body"> 
   <!-- définissions des onglets -->
 <div class="panel-heading">
-<nav class="navbar navbar-expand-sm navbar-light bg-transparent">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+  <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation">
+    Veuillez sélectionner une catégorie …
   </button>
   
   <div class="collapse navbar-collapse" id="navbarForNaturelles">
   <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-justified" role="tablist">
-    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="onglets nav-link active" id="pills-tab1">Présentation Générale</a></li>
-    <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="onglets nav-link" id="pills-tab2">Botanique Origine Extraction</a></li>
-    <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="onglets nav-link" id="pills-tab3">Réglementation</a></li>
-    <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="onglets nav-link" id="pills-tab4">Autres Remarques</a></li>
-    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="false" class="onglets nav-link" id="pills-tab6">Fournisseurs</a></li>
+    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1">Présentation Générale</a></li>
+    <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2">Botanique Origine Extraction</a></li>
+    <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3">Réglementation</a></li>
+    <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4">Autres Remarques</a></li>
+    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="false" class="nav-link" id="pills-tab6">Fournisseurs</a></li>
   </ul>
   </div>
 </nav>
@@ -707,24 +707,18 @@ crossorigin=""/>
 <div class="modal-content">
   
   <!-- En-tête du modal -->
-<div class="modal-header">
-<div class="row "> 
-<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-<div id="modaltitle1" class="modal-title"></div>
+<div class="modal-header d-block">
+<div>
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <span id="modaltitle1" class="modal-title"></span>
+  <span id="modalheader-type1" class="float-right modalheader-type2"></span>
 </div>
-<div class="row">
-<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-<div id="modalheader-type1" class="modalheader-type2"></div>
-<a href="/" class="close" data-dismiss="modal">&times;</a>
-</div>
-</div>	
-</div>	
-<div class="row">
-  <span id="modaltitle1-fili" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 Filiation"></span>
+<div class="text-center">
+  <span id="modaltitle1-fili" class="Filiation"></span>
 </div>
 </div>
 
-<div class="modal-body">
+<div class="modal-body text-justify my-modal-body">
   
   <!-- définissions des onglets -->
 <div class="panel-heading">
