--- a/html/_/index.html
+++ b/html/_/index.html
@@ -482,7 +482,7 @@ crossorigin=""/>
   </button>
   
   <div class="collapse navbar-collapse" id="navbarForNaturelles">
-  <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-justified" role="tablist">
+  <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
     <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1">Présentation Générale</a></li>
     <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2">Botanique Origine Extraction</a></li>
     <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3">Réglementation</a></li>
@@ -686,13 +686,7 @@ crossorigin=""/>
 </div>  <!--fin body-->
 
 <div class="modal-footer">
-<div class="container-fluid">
-<div class="row"> 
-<div class="col-12 text-center">
-  <a href="/" class="btn btn-default" data-dismiss="modal">Fermer</a>
-</div> 
-</div>
-</div>
+  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Close</button>
 </div> <!--fin footer-->
 
 </div> <!--fin content-->
@@ -722,20 +716,30 @@ crossorigin=""/>
   
   <!-- définissions des onglets -->
 <div class="panel-heading">
-  <ul id="ongletssynth" class="nav nav-pills nav-justified">
-    <li class="active"><a href="#tab12info" data-toggle="tab" class="onglets">Présentation Générale</a></li>
-    <li><a href="#tab7info" data-toggle="tab" class="onglets">Obtention  Chimie</a></li>
-    <li><a href="#tab8info" data-toggle="tab" class="onglets">Réglementation</a></li>
-    <li><a href="#tab10info" data-toggle="tab" class="onglets">Autres Remarques</a></li>
-    <li><a href="#tab11info" data-toggle="tab" class="onglets">Fournisseurs</a></li>
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+  <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForSynthetiques" aria-controls="navbarForSynthetiques" aria-expanded="false" aria-label="Toggle navigation">
+    Veuillez sélectionner une catégorie …
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarForSynthetiques">
+  <ul id="ongletssynth" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
+    <li class="nav-item"><a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link active" id="pills-tab-synthetiques-1">Présentation Générale</a></li>
+    <li class="nav-item"><a href="#tab7info" data-toggle="pill" aria-controls="tab7info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-2">Obtention  Chimie</a></li>
+    <li class="nav-item"><a href="#tab8info" data-toggle="pill" aria-controls="tab8info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-3">Réglementation</a></li>
+    <li class="nav-item"><a href="#tab10info" data-toggle="pill" aria-controls="tab10info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-4">Autres Remarques</a></li>
+    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-5">Fournisseurs</a></li>
   </ul>
+  </div>
+</nav>
 </div>
 <!--contenu des onglets-->
 <div class="panel-body">
 <div class="tab-content">
   
   <!--Onglet présentation générale-->
-<div class="tab-pane fade in active row" id="tab12info">
+<div class="tab-pane fade show active" id="tab12info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-1">
+<div class="container-fluid">
+<div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="background-color: blue;">
 <div id="modalbody-pict1" class="imgmp"></div>
@@ -764,9 +768,13 @@ crossorigin=""/>
 </div>    
 </div>
 </div>
+</div>
+</div>
 
 <!--Onglet chimie -->    
-<div class="tab-pane fade row" id="tab7info">
+<div class="tab-pane fade" id="tab7info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-2">
+<div class="container-fluid">
+<div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 <div id="modalbody-pict1A" class="imgmp"></div>
@@ -782,9 +790,13 @@ crossorigin=""/>
 </div>
 </div>
 </div>
+</div>
+</div>
 
 <!--Onglet Reglementation-->
-<div class="tab-pane fade row" id="tab8info">
+<div class="tab-pane fade" id="tab8info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-3">
+<div class="container-fluid">
+<div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
   <p class="item"><span class=IFRA><b>IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b><span id="modalbody-ifra1"  class="textitem"></span></span></p>
   
@@ -880,9 +892,12 @@ crossorigin=""/>
 
 </div>		
 </div>	 
+</div>
+</div>
 
 <!--onglet Commentaires-->
-<div class="tab-pane fade row" id="tab10info">
+<div class="tab-pane fade" id="tab10info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-4">
+<div class="container-fluid">
 <div class="row">
 <div class="col-lg-12">
   <p class="item"><span class="utilisation"><b>Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b><span id="modalbody-utilisation1" class="textitem"></span></span></p>
@@ -891,15 +906,18 @@ crossorigin=""/>
 </div>
 </div> 
 </div>
+</div>
 
 <!-- onglet fournisseurs -->
-<div class="tab-pane fade row" id="tab11info">
+<div class="tab-pane fade" id="tab11info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-5">
+<div class="container-fluid">
 <div class="row">
 <div class="col-lg-12">
   <p class="textitem"><span class="fournisseurs">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co"> fournisseurs@scentree.co </a></span></p>
 </div>
 </div>
-</div>	 
+</div>
+</div>
 
 </div><!--fin content -->
 </div><!--fin panel-body-->
@@ -907,11 +925,7 @@ crossorigin=""/>
 </div> <!--fin modal-body-->
 
 <div class="modal-footer">
-<div class="row"> 
-<div class="col-lg-12 text-center">
-  <a href="/" class="btn btn-default" data-dismiss="modal">Fermer</a>
-</div> 
-</div>
+  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Close</button>
 </div> <!-- fin footer -->
 </div> <!-- fin content -->
 </div> <!-- fin container -->
