'Synthétique' modal, 'Présentation gérérale' : 3 colums (lg) -> 2 columns (sm) -> 1 columns (xs)

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -738,12 +738,9 @@ crossorigin=""/>
   
   <!--Onglet présentation générale-->
 <div class="tab-pane fade show active" id="tab12info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-1">
-<div class="container-fluid">
+<div class="container-fluid panelcontent">
 <div class="row">
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-<div id="modalbody-pict1" class="imgmp"></div>
-<div class="row col-xs-6 col-sm-5 blockdonnees">
+<div class="col-xs-6 col-sm-6 col-lg-4 blockdonnees">
   <p class="item"><span><b>Tenue <sup class="fas fa-question-circle icone"  title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><span id="modalbody-tenue1" class="textitem"></span></span></p>
   
   <p class="item"><span> <b>Prix <sup class="fas fa-question-circle icone" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières première peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b><span id="modalbody-price1" class="textitem"></span></span></p>
@@ -754,7 +751,7 @@ crossorigin=""/>
 
   <p class="item"><span><b>Formule Brute <sup class="fas fa-question-circle icone" title="Formule répertoriant les atomes composant la molécule étudiée."></sup> :</b><span id="modalbody-fbrute1" class="textitem"></span></span></p>
 </div>
-<div class="row col-xs-6 col-sm-4 blockdonnees">
+<div class="col-xs-6 col-sm-6 col-lg-4 blockdonnees">
   <p class="item"><span><b>Densité <sup class="fas fa-question-circle icone" title="Donnée, sans unité, mettant en relation la masse pour un volume donné de matière première (d = 1,5 veut dire que 1 mL = 1,5 g)."></sup> :</b><span id="modalbody-densite1" class="textitem"></span></span></p>
   
   <p class="item"><span><b>Flash Point <sup class="fas fa-question-circle icone" title="Donne, en degrés, un indice sur la volatilité de la matière première. Il s'agit de la température à laquelle la matière première forme un mélange inflammable avec l'air en surface."></sup> :</b><span id="modalbody-fp1" class="textitem"></span></span></p>
@@ -765,8 +762,7 @@ crossorigin=""/>
   
   <p class="item"><span><b>Masse Molaire <sup class="fas fa-question-circle icone" title="Indice sur la taille de la molécule (et souvent sa volatilité), donné en g/mol."></sup> :</b><span id="modalbody-mmolaire1" class="textitem"></span></span></p>
 </div>
-</div>    
-</div>
+<div id="modalbody-pict1" class="imgmp col-xs-12 col-sm-12 col-lg-4"></div>
 </div>
 </div>
 </div>
