almost perfect menu bar for large screen

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -75,10 +75,10 @@ crossorigin=""/>
 <div class="row">
  
 <div class="col-3 col-md-12">
-	<button class="btn" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logob.png" alt="le logo de Scentree"></button>
+	<button class="btn mt-4" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logob.png" alt="le logo de Scentree"></button>
 </div>
 
-<div class="m-top-40  col-md-12  d-none d-sm-none d-md-block">Trouver une matière première :</div>
+<div class="text-underline  mt-5  col-md-12  d-none d-sm-none d-md-block"><strong>Trouver une matière première :</strong></div>
 
 <div class="col-2 offset-5 offset-md-0 col-md-12">
   <!--Recherche -->
@@ -88,34 +88,38 @@ crossorigin=""/>
   </form>
 </div>
 
-<div class="col-2 col-md-12 d-none d-md-block">
+<div class="col-2 col-md-12 d-none d-md-block  my-footer">
 <button type="button" class="btn d-md-none">M</button>
-<div class="container-fluid  text-center  boutonclickable bouton boutons  ">
+<div class="container-fluid  text-center">
 <div class="row" id="menuRow">
 
-<div class="col-12"><button class="btn" type="button" data-toggle="modal" data-target="#lesNouveautes">Découvrez les nouveautés !</button></div>
-<div class="col-12"><button class="btn" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Les collaborateurs de ScenTree</button></div>
-<div class="col-12 col-md-6"><button class="btn" type="button" data-toggle="modal" data-target="#lesSources">Sources</button></div>
-<div class="col-12 col-md-6"><button class="btn" type="button" data-toggle="modal" data-target="#lesContacts">Contacts</button></div>
-<div class="col-12 col-md-6 p-0"><button class="btn" type="button" data-toggle="modal" data-target="#lesMentionsLegales">Mentions Légales</button></div>
+	<!--<div class="col-12"><button class="btn btn text-underline" type="button" data-toggle="modal" data-target="#lesNouveautes">Découvrez les nouveautés !</button></div>-->
+<div class="col-12"><button class="btn  text-underline  mt-3" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button></div>
+<div class="col-12 col-md-6"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesSources">Sources</button></div>
+<div class="col-12 col-md-6"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesContacts">Contacts</button></div>
+<div class="col-12 col-md-6 p-0"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesMentionsLegales">Mentions Légales</button></div>
 
 <div class="col-12 col-md-6">
 <div class="container-fluid">
 <div class="row">
-<div class="offset-2 col-4 p-0"><a id="linkedIn_button">IN</a></div>
-<div class="col-4 p-0"><a id="instagram_button">IG</a></div>
+<div class="col-4 p-0"><a id="linkedIn_button" href="https://www.linkedin.com/company/scentree/">IN</a></div>
+<div class="col-4 p-0"><a id="instagram_button" href="https://www.instagram.com/scentree_/">IG</a></div>
+<div class="col-4 p-0"><a id="twitter_button" href="https://www.twitter.com/Scentree1">TW</a></div>
 </div>
 </div>
 </div>
 
+</div>
+
+<div id="copyright" class="row  d-none d-sm-none d-md-block">
+  <sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
+</div>
 
 </div>
 </div>
-</div>
-
-<div id="copyright" class="col-md-12   d-none d-sm-none d-md-block"><sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |</div>
 
 </div>
+
 </div>
 </div>
 
@@ -201,7 +205,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Contact</h4>
 </div>
 
-<div class="modal-body text-justify my-modal-body">
+<div class="modal-body text-justify">
   
 <div class="mail">
   <p>Si vous souhaitez nous faire part d'une remarque ou d'une interrogation, merci de rentrer en contact avec l'une des adresses mails suivantes : </p>
@@ -235,7 +239,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Sources</h4>
 </div>
 
-<div class="modal-body text-justify my-modal-body">
+<div class="modal-body text-justify">
   
 <div class="source">
   <p>Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </p>
@@ -304,7 +308,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Ils nous soutiennent</h4>
 </div>
 
-<div class="modal-body text-justify my-modal-body">
+<div class="modal-body text-justify">
   <p> Le projet <b><i>ScenTree</i></b> a été imaginé et conçu par deux étudiants du master MSc de l’ISIPCA, Maxime BAUD et Thomas ESPINASSE. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail.  </p>
   <p> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </p>
   
@@ -354,7 +358,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Les ingrédients du ScenTree</h4>
 </div>
 
-<div class="modal-body text-justify my-modal-body">
+<div class="modal-body text-justify">
   
 <div class="row">
 <div class="col-lg-6">
@@ -384,7 +388,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Les familles et descripteurs olfactifs du ScenTree</h4>
 </div>
 
-<div class="modal-body text-justify my-modal-body">
+<div class="modal-body text-justify">
 <div class="container-fluid">
   
   <p>Le projet <i>ScenTree</i> utilise un ensemble de familles et de descripteurs olfactifs pour classifier l'ensemble des matières premières disponibles sur le site. Les voici : </p>
@@ -458,7 +462,7 @@ crossorigin=""/>
 
 <!-- MODAL NATURELLES -->    
 <div id="naturelleModal" tabindex="-1" class="modal fade" role="dialog">
-<div class="modal-dialog modal-lg" role="document">
+<div class="modal-dialog modal-xl" role="document">
 <div class="modal-content">
   
   <!--modal header-->
@@ -473,7 +477,7 @@ crossorigin=""/>
 </div>
 </div>
 
-<div class="modal-body text-justify my-modal-body"> 
+<div class="modal-body text-justify"> 
   <!-- définissions des onglets -->
 <div class="panel-heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
@@ -696,7 +700,7 @@ crossorigin=""/>
 
 <!--MODAL SYNTHETIQUES-->
 <div id="SynthetiqueModal" class="modal fade" tabindex="-1" role="dialog">
-<div class="modal-dialog modal-lg" role="document">
+<div class="modal-dialog modal-xl" role="document">
   <!-- Modal content -->
 <div class="modal-content">
   
@@ -712,7 +716,7 @@ crossorigin=""/>
 </div>
 </div>
 
-<div class="modal-body text-justify my-modal-body">
+<div class="modal-body text-justify">
   
   <!-- définissions des onglets -->
 <div class="panel-heading">
@@ -940,7 +944,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Mentions Légales</h4>
 </div>
 
-<div class="modal-body text-justify my-modal-body">
+<div class="modal-body text-justify">
   <p>En vertu du règlement (EU-RGPD) 2016/679 du Parlement Européen et du Conseil du 27 avril 2016 relatif à la protection des personnes physiques à l’égard du traitement des données à caractère personnel et à la libre circulation de ces données, et abrogeant la directive 95/46/CE (Règlement Général sur la Protection des Données) et conformément aux dispositions des articles 6-III et 19 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, nous portons à la connaissance des utilisateurs et visiteurs du site internet <a href="http://scentree.co/" target="_BLANK">scentree.co</a> les informations suivantes.</p>
   
   <ol>
