almost perfect double search bars

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -38,7 +38,7 @@ crossorigin=""/>
     R
   </button>
   <form action="" autocomplete="off"  class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownSearchButton-sm">
-    <div class="form-group"><input id="searchinput-sm" type="search" class="form-control" placeholder="Nom (botanique) ou N°CAS..." /></div>
+    <div class="form-group"><input id="searchinput-sm" type="search" class="my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." /></div>
   </form>
 </div>
 <div class="dropdown pl-1">
@@ -83,7 +83,7 @@ crossorigin=""/>
 <div class="col-2 offset-5 offset-md-0 col-md-12">
   <!--Recherche -->
   <form class="" action="" autocomplete="off" id="searchForm">
-    <input id="searchinput" type="search" class="form-control" placeholder="Nom (botanique) ou N°CAS..." />
+    <input id="searchinput" type="search" class="my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
   </form>
 </div>
 
