mistranslation : 'Close' -> 'Fermer'

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -450,7 +450,7 @@ crossorigin=""/>
 </div> <!-- fin body -->
 
 <div class="modal-footer">
-  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Close</button>
+  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Fermer</button>
 </div> <!-- fin footer -->
 
 </div> <!-- fin content -->
@@ -688,7 +688,7 @@ crossorigin=""/>
 </div>  <!--fin body-->
 
 <div class="modal-footer">
-  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Close</button>
+  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Fermer</button>
 </div> <!--fin footer-->
 
 </div> <!--fin content-->
@@ -923,7 +923,7 @@ crossorigin=""/>
 </div> <!--fin modal-body-->
 
 <div class="modal-footer">
-  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Close</button>
+  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Fermer</button>
 </div> <!-- fin footer -->
 </div> <!-- fin content -->
 </div> <!-- fin container -->
