icons instead of text abbr.

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -31,19 +31,19 @@ crossorigin=""/>
 <body class="d-flex flex-column h-100">
 <header class="d-md-none">
 <!-- fixed navbar -->
-<nav class="navbar  navbar-dark fixed-top bg-dark">
+<nav class="navbar  fixed-top  fillright">
 	<button class="btn  mr-auto" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logob.png" alt="le logo de Scentree"></button>
-<div class="dropdown dropleft">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownSarchButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    R
+<div class="dropdown">
+  <button class="btn dropdown-toggle" type="button" id="dropdownSarchButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	  <img src="../img/search1.png" class="max-height-30px" alt="Rechercher …" />
   </button>
   <form action="" autocomplete="off"  class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownSearchButton-sm">
     <div class="form-group"><input id="searchinput-sm" type="search" class="my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." /></div>
   </form>
 </div>
 <div class="dropdown pl-1">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    M
+  <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <img src="../img/menu-burger.png" class="max-height-30px" alt="Menu …" />
   </button>
   <div class="dropdown-menu dropdown-menu-right  text-center" aria-labelledby="dropdownMenuButton-sm">
 	  <!--<button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesNouveautes">Les nouveautés</button>-->
@@ -55,7 +55,7 @@ crossorigin=""/>
       <label class="btn btn-primary"><input type="radio" name="options" id="option2" autocomplete="off" checked />EN</label>
     </div>-->
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesMentionsLegales">Mentions Légales</button>
-    <a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/">IN</a> <a class="instagram_button" href="https://www.instagram.com/scentree_/">IG</a> <a class="twitter_button" href="https://www.twitter.com/Scentree1">TW</a>
+    <a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-20px" /></a> <a class="instagram_button" href="https://www.instagram.com/scentree_/"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-20px" /></a> <a class="twitter_button" href="https://www.twitter.com/Scentree1"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-20px" /></a>
   </div>
 </div>
 </nav>
@@ -100,9 +100,9 @@ crossorigin=""/>
 <div class="col-12 col-md-6">
 <div class="container-fluid">
 <div class="row">
-<div class="col-4 p-0"><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/">IN</a></div>
-<div class="col-4 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree_/">IG</a></div>
-<div class="col-4 p-0"><a class="twitter_button" href="https://www.twitter.com/Scentree1">TW</a></div>
+<div class="col-4 p-0"><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-20px" /></a></div>
+<div class="col-4 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree_/"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-20px" /></a></div>
+<div class="col-4 p-0"><a class="twitter_button" href="https://www.twitter.com/Scentree1"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-20px" /></a></div>
 </div>
 </div>
 </div>
