scroll inside some d

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -203,7 +203,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Contact</h4>
 </div>
 
-<div class="modal-body text-justify">
+<div class="modal-body text-justify scrollbar-inside">
   
 <div class="mail">
   <p>Si vous souhaitez nous faire part d'une remarque ou d'une interrogation, merci de rentrer en contact avec l'une des adresses mails suivantes : </p>
@@ -237,7 +237,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Sources</h4>
 </div>
 
-<div class="modal-body text-justify">
+<div class="modal-body text-justify scrollbar-inside">
   
 <div class="source">
   <p>Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </p>
@@ -306,7 +306,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Ils nous soutiennent</h4>
 </div>
 
-<div class="modal-body text-justify">
+<div class="modal-body text-justify scrollbar-inside">
   <p> Le projet <b><i>ScenTree</i></b> a été imaginé et conçu par deux étudiants du master MSc de l’ISIPCA, Maxime BAUD et Thomas ESPINASSE. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail.  </p>
   <p> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </p>
   
@@ -356,7 +356,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Les ingrédients du ScenTree</h4>
 </div>
 
-<div class="modal-body text-justify">
+<div class="modal-body text-justify scrollbar-inside">
   
 <div class="row">
 <div class="col-lg-6">
@@ -386,7 +386,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Les familles et descripteurs olfactifs du ScenTree</h4>
 </div>
 
-<div class="modal-body text-justify">
+<div class="modal-body text-justify scrollbar-inside">
 <div class="container-fluid">
   
   <p>Le projet <i>ScenTree</i> utilise un ensemble de familles et de descripteurs olfactifs pour classifier l'ensemble des matières premières disponibles sur le site. Les voici : </p>
@@ -475,7 +475,7 @@ crossorigin=""/>
 </div>
 </div>
 
-<div class="modal-body text-justify"> 
+<div class="modal-body text-justify scrollbar-inside"> 
   <!-- définissions des onglets -->
 <div class="panel-heading">
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
@@ -714,7 +714,7 @@ crossorigin=""/>
 </div>
 </div>
 
-<div class="modal-body text-justify">
+<div class="modal-body text-justify scrollbar-inside">
   
   <!-- définissions des onglets -->
 <div class="panel-heading">
@@ -942,7 +942,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Mentions Légales</h4>
 </div>
 
-<div class="modal-body text-justify">
+<div class="modal-body text-justify scrollbar-inside">
   <p>En vertu du règlement (EU-RGPD) 2016/679 du Parlement Européen et du Conseil du 27 avril 2016 relatif à la protection des personnes physiques à l’égard du traitement des données à caractère personnel et à la libre circulation de ces données, et abrogeant la directive 95/46/CE (Règlement Général sur la Protection des Données) et conformément aux dispositions des articles 6-III et 19 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, nous portons à la connaissance des utilisateurs et visiteurs du site internet <a href="http://scentree.co/" target="_BLANK">scentree.co</a> les informations suivantes.</p>
   
   <ol>
