burger menu from fontawesome

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -43,7 +43,7 @@ crossorigin=""/>
 </div>
 <div class="dropdown pl-1">
   <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    <img src="../img/menu-burger.png" class="max-height-30px" alt="Menu …" />
+	  <i class="fas fa-bars"></i>
   </button>
   <div class="dropdown-menu dropdown-menu-right  text-center" aria-labelledby="dropdownMenuButton-sm">
 	  <!--<button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesNouveautes">Les nouveautés</button>-->
