no more padding for the search bar (small screen)

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -37,8 +37,8 @@ crossorigin=""/>
   <button class="btn dropdown-toggle" type="button" id="dropdownSarchButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	  <img src="../img/search1.png" class="max-height-30px" alt="Rechercher …" />
   </button>
-  <form action="" autocomplete="off"  class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownSearchButton-sm">
-    <div class="form-group"><input id="searchinput-sm" type="search" class="my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." /></div>
+  <form action="" autocomplete="off"  class="dropdown-menu dropdown-menu-right p-0" aria-labelledby="dropdownSearchButton-sm">
+    <div class=""><input id="searchinput-sm" type="search" class="my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." /></div>
   </form>
 </div>
 <div class="dropdown pl-1">
