--- a/html/_/index.html
+++ b/html/_/index.html
@@ -100,9 +100,9 @@ crossorigin=""/>
 <div class="col-12 col-md-6">
 <div class="container-fluid">
 <div class="row">
-<div class="col-4 p-0"><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-20px" /></a></div>
-<div class="col-4 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree_/"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-20px" /></a></div>
-<div class="col-4 p-0"><a class="twitter_button" href="https://www.twitter.com/Scentree1"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-20px" /></a></div>
+<div class="col-12 p-1"><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-30px" /></a></div>
+<div class="col-6 p-1"><a class="instagram_button" href="https://www.instagram.com/scentree_/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-30px" /></a></div>
+<div class="col-6 p-1"><a class="twitter_button" href="https://www.twitter.com/Scentree1" target="_blank"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-30px" /></a></div>
 </div>
 </div>
 </div>
