bigger menu bar for xl-screen

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -70,7 +70,7 @@ crossorigin=""/>
 
 <!-- Cette classe container est divisée en 2 partie, mapblock (partie de gauche) et rightblock (partie de droite avec le logo la recherche etc etc) -->
 
-<div id="menu-block" class="d-none d-md-block  col-md-3 col-xl-2  h-100 fillright">
+<div id="menu-block" class="d-none d-md-block  col-md-3  h-100 fillright">
 <div class="container-fluid">
 <div class="row">
  
@@ -122,7 +122,7 @@ crossorigin=""/>
 </div>
 
 
-<div id="mapblock" class="col-md-9 order-md-first col-xl-10 p-0  h-100  fill2">
+<div id="mapblock" class="col-md-9 order-md-first p-0  h-100  fill2">
 
 <div id="RGPD_warning" class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
 <div id="blanc1" class="row blockrgpd"></div>
