'Ils nous soutiennent' : bigger, stronger, more alone

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -92,7 +92,7 @@ crossorigin=""/>
 <div class="row" id="menuRow">
 
 	<!--<div class="col-12"><button class="btn btn text-underline" type="button" data-toggle="modal" data-target="#lesNouveautes">Découvrez les nouveautés !</button></div>-->
-<div class="col-12"><button class="btn  text-underline  mt-3" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button></div>
+<div class="col-12  p-0"><button class="btn  text-underline font-weight-bold  mt-3 mb-3 px-0" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button></div>
 <div class="col-12 col-md-6"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesSources">Sources</button></div>
 <div class="col-12 col-md-6"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesContacts">Contacts</button></div>
 <div class="col-12 col-md-6 p-0"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesMentionsLegales">Mentions Légales</button></div>
