--- a/html/_/index.html
+++ b/html/_/index.html
@@ -78,7 +78,7 @@ crossorigin=""/>
 	<button class="btn mt-4" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logob.png" alt="le logo de Scentree"></button>
 </div>
 
-<div class="text-underline  mt-5  col-md-12  d-none d-sm-none d-md-block"><strong>Trouver une matière première :</strong></div>
+<div class="text-underline font-weight-bold text-size-1-5vw  mt-5  col-md-12  d-none d-sm-none d-md-block">Trouver une matière première&nbsp;:&nbsp;</div>
 
 <div class="col-2 offset-5 offset-md-0 col-md-12">
   <!--Recherche -->
