--- a/html/_/index.html
+++ b/html/_/index.html
@@ -485,11 +485,11 @@ crossorigin=""/>
   
   <div class="collapse navbar-collapse" id="navbarForNaturelles">
   <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1">Présentation Générale</a></li>
+    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link" id="pills-tab1">Présentation Générale</a></li>
     <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2">Botanique Origine Extraction</a></li>
     <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3">Réglementation</a></li>
     <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4">Autres Remarques</a></li>
-    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="false" class="nav-link" id="pills-tab6">Fournisseurs</a></li>
+    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="false" class="nav-link active" id="pills-tab6">Fournisseurs</a></li>
   </ul>
   </div>
 </nav>
@@ -499,7 +499,7 @@ crossorigin=""/>
 <div class="tab-content">
   
   <!--Onglet présentation générale-->
-<div class="tab-pane fade show active" id="tab1info" role="tabpanel" aria-labelledby="pills-tab1">
+<div class="tab-pane fade" id="tab1info" role="tabpanel" aria-labelledby="pills-tab1">
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent" >
@@ -673,7 +673,7 @@ crossorigin=""/>
 </div>
 
 <!-- Onglet Fournisseurs -->
-<div class="tab-pane fade" id="tab6info"  role="tabpanel" aria-labelledby="pills-tab6">
+<div class="tab-pane fade show active" id="tab6info"  role="tabpanel" aria-labelledby="pills-tab6">
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
@@ -725,11 +725,11 @@ crossorigin=""/>
   
   <div class="collapse navbar-collapse" id="navbarForSynthetiques">
   <ul id="ongletssynth" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link active" id="pills-tab-synthetiques-1">Présentation Générale</a></li>
+    <li class="nav-item"><a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link" id="pills-tab-synthetiques-1">Présentation Générale</a></li>
     <li class="nav-item"><a href="#tab7info" data-toggle="pill" aria-controls="tab7info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-2">Obtention  Chimie</a></li>
     <li class="nav-item"><a href="#tab8info" data-toggle="pill" aria-controls="tab8info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-3">Réglementation</a></li>
     <li class="nav-item"><a href="#tab10info" data-toggle="pill" aria-controls="tab10info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-4">Autres Remarques</a></li>
-    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-5">Fournisseurs</a></li>
+    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="false" class="nav-link active" id="pills-tab-synthetiques-5">Fournisseurs</a></li>
   </ul>
   </div>
 </nav>
@@ -739,7 +739,7 @@ crossorigin=""/>
 <div class="tab-content">
   
   <!--Onglet présentation générale-->
-<div class="tab-pane fade show active" id="tab12info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-1">
+<div class="tab-pane fade" id="tab12info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-1">
 <div class="container-fluid panelcontent">
 <div class="row">
 <div class="col-xs-6 col-sm-6 col-lg-4 blockdonnees">
@@ -907,7 +907,7 @@ crossorigin=""/>
 </div>
 
 <!-- onglet fournisseurs -->
-<div class="tab-pane fade" id="tab11info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-5">
+<div class="tab-pane fade show show active" id="tab11info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-5">
 <div class="container-fluid">
 <div class="row">
 <div class="col-lg-12">
